# emercard-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  render.yaml
.plan/in-progress/phase1-backend-database-linking/: context-pack.md  handoff.md  tasks.md
docs/: card-persistence.md  configuration.md  database-models.md  deployment.md  http-contract.md  maintenance.md  smoke-checks.md  verification.md
src/emercard/: __init__.py  __main__.py  main.py
src/emercard/api/: __init__.py  admin_card_routes.py  auth_routes.py  emergency_routes.py  errors.py  middleware.py  profile_routes.py  public_profile_routes.py  routes.py  user_card_routes.py
src/emercard/core/: config.py  types.py
src/emercard/db/: __init__.py  backfill_profiles.py  indexes.py  initialize.py  lifecycle.py  normalize_legacy_links.py  public_profile_links.py  repositories.py  retire_legacy_access_fields.py  seed_admin.py
src/emercard/modules/: __init__.py
src/emercard/modules/auth/: __init__.py  exceptions.py  (+2 more)
tests/: conftest.py  test_admin_cards.py  test_api.py  test_auth.py  test_backfill_profiles.py  test_card_link_assignments.py  test_cards.py  test_config.py  test_db.py  test_emergency.py  test_indexes.py  test_link_access_history.py  test_location_alerts.py  test_models.py  test_mongo_integration.py  test_normalize_legacy_links.py  test_profile_link_card_binding.py  test_profiles.py  test_public_profile_links.py  test_repositories.py  test_request_logging.py  test_retire_legacy_access_fields.py  test_seed_admin.py  test_user_cards.py
(+38 files in other folders)
