[project]
name = "emercard-backend"
version = "0.1.0"
description = "EmerCard Phase 1 backend foundation"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "argon2-cffi==25.1.0",
    "fastapi==0.139.0",
    "pydantic-settings==2.13.1",
    "pyjwt==2.10.1",
    "pymongo==4.17.0",
    "uvicorn[standard]==0.41.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.0",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emercard"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "mongo: requires an explicitly configured disposable MongoDB test database",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
